--- a/style.scss
+++ b/style.scss
@@ -34,7 +34,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: $darkerGray;
   font-weight: bold;
-  background-color: $lightGray
+  background-color: $lightGray;
   font-style: italic;
 
   line-height: 1.7;
