--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,14 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/introduction">Introduction</a>
             <a href="{{ site.baseurl }}/methods">Methods</a>
+            <a href="{{ site.baseurl }}/lit">Literature Review</a>
+            <a href="{{ site.baseurl }}/code">Code and Data Cleaning</a>
+            <a href="{{ site.baseurl }}/analysis">Analysis</a>
+            <a href="{{ site.baseurl }}/conclusion">Conclusion</a>
+            <a href="{{ site.baseurl }}/bibliography">Bibliography</a>
+            
           </nav>
         </header>
       </div>
