--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,7 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/">About</a>
             <a href="{{ site.baseurl }}/introduction">Introduction</a>
             <a href="{{ site.baseurl }}/methods">Methods</a>
             <a href="{{ site.baseurl }}/lit">Literature Review</a>
@@ -36,6 +35,7 @@
             <a href="{{ site.baseurl }}/analysis">Analysis</a>
             <a href="{{ site.baseurl }}/conclusion">Conclusion</a>
             <a href="{{ site.baseurl }}/bibliography">Bibliography</a>
+            <a href="{{ site.baseurl }}/blog">Blog</a>
             
           </nav>
         </header>
